# Mini-SOAR-Project

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: actions.py  alerts.py  cases.py  ingest.py  metrics.py  stats.py  tickets.py
backend/app/core/: config.py
backend/app/metrics/: prometheus.py
backend/app/models/: __init__.py  action.py  alert.py  artifact.py  case.py  ticket.py  timeline.py
backend/app/services/: extraction.py  reporting.py
backend/app/services/enrichment/: dns.py  rdap.py
backend/tests/: conftest.py  test_case_close_report.py  test_health_metrics.py
data/threatfeeds/: sample_bad_domains.txt  sample_bad_ips.txt
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/cases/[id]/: page.tsx
frontend/components/: TopNav.tsx  ui.tsx
frontend/lib/: api.ts
grafana/dashboards/: mini-soar.json
grafana/provisioning/dashboards/: provider.yml
playbooks/: beacon_v1.yml  suspicious_login_v1.yml
prometheus/: prometheus.yml
simulators/: beacon_generator.py  login_anomaly_generator.py  phishing_generator.py
worker/: Dockerfile  pyproject.toml  tasks.py  worker_config.py
