[tool.poetry]
name = "mini-soar-backend"
version = "1.0.0"
description = "Mini-SOAR Incident Automation Platform (local)"
authors = ["You <you@example.com>"]
readme = "../README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.6", extras = ["standard"] }
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
sqlmodel = "^0.0.22"
sqlalchemy = "^2.0.32"
psycopg = { version = "^3.2.1", extras = ["binary"] }
celery = "^5.4.0"
redis = "^5.0.8"
dnspython = "^2.6.1"
httpx = "^0.27.2"
prometheus-client = "^0.21.0"
reportlab = "^4.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.9"
black = "^24.8.0"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
