[tool.poetry]
name = "mini-soar-worker"
version = "1.0.0"
description = "Mini-SOAR Celery worker"
authors = ["You <you@example.com>"]

# App/service repo, not a library package
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
celery = "^5.4.0"
redis = "^5.0.8"
sqlmodel = "^0.0.22"
sqlalchemy = "^2.0.32"
psycopg = { version = "^3.2.1", extras = ["binary"] }
pydantic-settings = "^2.4.0"
pydantic = "^2.8.2"
dnspython = "^2.6.1"
httpx = "^0.27.2"
prometheus-client = "^0.21.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
black = "^24.8.0"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"